; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_process_utility.c_process_drop.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_process_utility.c_process_drop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i64 }
%struct.TYPE_13__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_12__*)* @process_drop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @process_drop(%struct.TYPE_12__* %0) #0 {
  %2 = alloca %struct.TYPE_12__*, align 8
  %3 = alloca %struct.TYPE_13__*, align 8
  store %struct.TYPE_12__* %0, %struct.TYPE_12__** %2, align 8
  %4 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = inttoptr i64 %6 to %struct.TYPE_13__*
  store %struct.TYPE_13__* %7, %struct.TYPE_13__** %3, align 8
  %8 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  switch i32 %10, label %26 [
    i32 129, label %11
    i32 130, label %18
    i32 128, label %22
  ]

11:                                               ; preds = %1
  %12 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %13 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %14 = call i32 @process_drop_hypertable(%struct.TYPE_12__* %12, %struct.TYPE_13__* %13)
  %15 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %16 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %17 = call i32 @process_drop_chunk(%struct.TYPE_12__* %15, %struct.TYPE_13__* %16)
  br label %27

18:                                               ; preds = %1
  %19 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %20 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %21 = call i32 @process_drop_hypertable_index(%struct.TYPE_12__* %19, %struct.TYPE_13__* %20)
  br label %27

22:                                               ; preds = %1
  %23 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %24 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %25 = call i32 @block_dropping_continuous_aggregates_without_cascade(%struct.TYPE_12__* %23, %struct.TYPE_13__* %24)
  br label %27

26:                                               ; preds = %1
  br label %27

27:                                               ; preds = %26, %22, %18, %11
  ret void
}

declare dso_local i32 @process_drop_hypertable(%struct.TYPE_12__*, %struct.TYPE_13__*) #1

declare dso_local i32 @process_drop_chunk(%struct.TYPE_12__*, %struct.TYPE_13__*) #1

declare dso_local i32 @process_drop_hypertable_index(%struct.TYPE_12__*, %struct.TYPE_13__*) #1

declare dso_local i32 @block_dropping_continuous_aggregates_without_cascade(%struct.TYPE_12__*, %struct.TYPE_13__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
